Initial commit of a refactored German version of the Etherpad Zotero-Plugin:
- updated deprecated code, removed obsolete code
- translation of all French text to German
- enabled access to actual Zotero account though old xml API of Zotero (version 1) is being used
- provided new toolbar button icon for citation source insertion
- added new toolbar button for reference insertion
- skipped dialog for Zotoro API Keys; reading API keys from new config file "zotero_api.json"
- introduced constants for API URLs
- introduced 3 citation styles for citation source and references insertion
- replaced modal dialogs by popup dialogs
- implemented cut/copy and paste for Zotero references
- hide Zotero buttons on pad in readonly mode
- bluring Zotero citaton sources in Pad text to facilitate their identification

--- a/static/css/zotero.css
+++ b/static/css/zotero.css
@@ -1,6 +1,6 @@
 .zoteroButton > a > .buttonicon
 {
-    background-image: url('../images/zotero.png');
+    background-image: url('../static/images/zotero.png');
 }
 
 .test
@@ -8,9 +8,64 @@
     color: red;
 }
 
-/* Modals */
+/* Popup container */
+.popup {
+    position:absolute;
+    right: 30px;
+    top: 12%;
+  }
 
-.modal
+.popup .zotero-popup {
+    max-width: 410px;
+    position: absolute;
+    left: 75%;
+    top: 40%;
+  }
+  
+.popup .radio-btn
+{
+    margin-right: 5px;
+    margin-left: 10px;
+}
+
+.popup .radio-label 
+{
+    margin-left: 5px;
+    font-weight: bold;
+}
+
+.popup .search-label
+{
+    margin-left: 5px;
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.popup .radio-inline 
+{
+    margin-left: 5px;
+}
+
+/* Modals */
+.modal .radio-btn
+{
+    margin-right: 5px;
+    margin-left: 10px;
+}
+
+.modal .radio-label 
+{
+    margin-left: 30px;
+    font-weight: bold;
+}
+
+.modal .radio-inline 
+{
+    margin-left: 5px;
+}
+
+
+.modal 
 {
     top: 10%;
     right: 30%;
@@ -28,7 +83,6 @@
     margin-left: 30px;
 }
 
-
 .modal li
 {
     padding-bottom: 5px;
@@ -43,6 +97,7 @@
 {
     margin-left: 10px;
     padding: 0 12px;
+    font-weight: normal;
 }
 
 .modal .ajax-loading
@@ -54,24 +109,6 @@
     margin-top: 20px;
 }
 
-.modal .save-ids
-{
-    font-size: 11px;
-    font-weight: normal;
-    font-style: italic;
-}
-
-.modal .help
-{
-    display: none;
-}
-.modal .help.active
-{
-    display: block;
-}
-
-
-
 .delete-ids
 {
     padding: 1px 5px;
@@ -80,29 +117,53 @@
 }
 
 /* Bootstrap fixes */
-
-.toolbar
-{
-    font-size: 62.5%;
-}
-
 .modal .table tbody>tr>td
 {
     vertical-align: middle;
 }
 
-.modal-body
+.modal-body 
 {
     max-height: 330px;
     overflow: auto;
 }
 
-.modal-dialog
+.modal-dialog 
 {
     width: auto;
 }
 
-#myusernameform
+.input-api
 {
-    font-size: 62.5%;
+    width:250px;
+}
+
+/*
+.zotero-entry
+{
+   text-decoration-line: overline
+   text-decoration: underline wavy
+   text-shadow: 0 0 2px
+}
+*/
+
+.label-api
+{
+    padding: 0px 10px;
+}
+
+.td-group
+{
+    font-weight: bold;
+    font-style: italic;
+}
+
+.td-item-title
+{
+    font-weight: bold;
+}
+
+.td-item
+{
+    font-style: italic;
 }
