--- a/templates/editbarButtons.ejs
+++ b/templates/editbarButtons.ejs
@@ -1,5 +1,15 @@
-<li class="zoteroButton">
-  <a title="Insert zotero reference">
-    <span class="buttonicon"></span>
+<div>
+<li class='separator'></li>
+<li id="zotBtn" class="zoteroButton">
+  <a title="Zitatquelle aus Zotero einfügen">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+     <span class="fas fa-quote-right">
   </a>
 </li>
+<li id="refBtn" class="referencesButton">
+  <a title="Literaturverzeichnis einfügen">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+     <span class="fas fa-book"></span>
+  </a>
+</li>
+</div>
